--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_native_splash: ^2.4.7
+  smooth_page_indicator: ^1.2.1
+  animate_do: ^4.2.0
+  firebase_core: ^4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +62,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/icons/
+    - assets/images/
+  # - assets/fonts
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
